--- a/styles/components/_panel.scss
+++ b/styles/components/_panel.scss
@@ -39,6 +39,8 @@
     border-left: 0;
   }
 
+  > .table.-bordered > tbody > tr:last-child > td { border-bottom: 0; }
+
   > .table.-bordered > thead > tr > th:last-child,
   > .table.-bordered > tbody > tr > td:last-child {
     border-right: 0;
