update disable button design

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -131,6 +131,9 @@
   &.-disabled,
   &:disabled {
     cursor: not-allowed;
+    border: 0;
+    background-color: $brand-gray-lt;
+    color: $brand-gray;
   }
 
   > .icon:first-child {
