--- a/styles/components/_slate.scss
+++ b/styles/components/_slate.scss
@@ -9,8 +9,12 @@
 	&.-plain { background: $brand-white; }
 
   // For consistency
-  h1, h2, h3, h4, h5, h6, p {
+  h1, h2, h3, h4, h5, h6 {
     margin-bottom: $spacer-large;
+  }
+
+  p {
+    margin-bottom: $spacer-small;
   }
 
   // To put a margin for preceding elements like icon and loader
