--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -53,7 +53,7 @@
     border: 1px solid $brand-gray;
   }
 
-  &.-primary { @include btn-variant($brand-sidebar-lt); }
+  &.-primary { @include btn-variant($brand-primary); }
   &.-sky { @include btn-variant($brand-sky); }
   &.-emerald { @include btn-variant($brand-emerald); }
   &.-crimson { @include btn-variant($brand-crimson); }
@@ -75,6 +75,7 @@
       text-decoration: none;
     }
   }
+  &.-primary-link { @include btn-variant($brand-white, $brand-sidebar-lt); }
 
   &.-inverted.-default { @include btn-variant-inverted($brand-gray); }
   &.-inverted.-primary { @include btn-variant-inverted($brand-sidebar-lt); }
