add new util _heading-bold for easy bold header

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -102,3 +102,8 @@
   margin-left: auto !important;
   margin-right: auto !important;
 }
+
+// Header bold
+._heading-bold {
+  font-weight: 600;
+}
