Add alert growl.
Resolves https://github.com/dev-onenetworkecommerce/aia/issues/125.

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -15,6 +15,7 @@
 @import "components/pagination";
 @import "components/light-btn";
 @import "components/alert";
+@import "components/alert-growl";
 @import "components/label";
 @import "components/badge";
 @import "components/nav";
