--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -8,7 +8,7 @@
   border: 1px solid $brand-black;
   border-radius: $border-radius-base;
   outline: none;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.075);
 
   &:focus {
     border-color: $brand-sky;
@@ -109,13 +109,13 @@ label {
   }
 
   > .form-control:last-child,
+  > .form-control:not(:first-child):not(:last-child),
   > .addon:last-child,
   > .addon.-btn:last-child > .btn {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
 
-  > .form-control:not(:first-child):not(:last-child),
   > .addon:not(:first-child):not(:last-child),
   > .addon:not(:first-child):not(:last-child) > .btn {
     border-radius: 0;
@@ -130,6 +130,9 @@ label {
     z-index: 2;
     float: left;
     width: 100%;
+  }
+  > .form-control:first-child {
+    border-right: none;
   }
 
   > .addon {
