--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -77,14 +77,13 @@
   }
 
   &.-primary-link { 
-    @include btn-variant($brand-white, $brand-sky);
+    @include btn-variant($brand-white, $brand-sidebar-lt);
     border: 1px solid $brand-gray;
 
     &:hover,
     &:focus {
       color: $brand-white;
-      background-color: $brand-sky;
-      border-color: $brand-white;
+      background: $brand-sidebar-lt;
     }
   }
 
