--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -5,7 +5,7 @@
   margin-top: ($dropdown-arrow-size * 2);
 
   > .menu {
-    @include drop-shadow;
+    @include drop-shadow("top");
     position: relative;
     padding: ($padding-x / 2) 0;
     min-width: 160px;
